<resources>
    <string name="app_name">MyMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_mymail">MyMail</string>
    <string name="nombre">Valentin Ruiz Lopez</string>
    <string name="inbox">inbox</string>
    <string name="outbox">outbox</string>
    <string name="spam">spam</string>
    <string name="trash">trash</string>
    <string name="valentin">Valentin Ruiz Lopez</string>
    <string name="alberto">Alberto Gonzalez Abril</string>
    <string name="juan">Juan Melero Collado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mailcontentfragment">Mail Content fragment</string>
</resources>
