<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_insert_invitation_black_24dp"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_outbox"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/outbox" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/trash" />
        <item
            android:id="@+id/nav_spam"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/spam" />
    </group>

</menu>
